force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <description>Disclaimer:
Record type = who created the meeting
Owner = who got the meeting</description>
    <label>Meeting</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>