force-app/main/default/objects/Meeting__c/fields/Account_LinkedIn_Company__c.field-meta.xml
<CustomField>
    <fullName>Account_LinkedIn_Company__c</fullName>
    <description>Used in Email Template &quot;Email Template for MIR Handover Flow&quot;</description>
    <formula>Account__r.LinkedIn_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account LinkedIn Company</label>
    <type>Text</type>
</CustomField>