force-app/main/default/objects/Meeting__c/fields/Account_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Division__c</fullName>
    <description>shows Account Sub Division from BI Data</description>
    <formula>Account__r.Sub_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ROE Sub Division</label>
    <type>Text</type>
</CustomField>