force-app/main/default/objects/Meeting__c/fields/Additional_Stakeholders_and_Team_structu__c.field-meta.xml
<CustomField>
    <fullName>Additional_Stakeholders_and_Team_structu__c</fullName>
    <inlineHelpText>Example: The prospect is one of 3 analysts that covers the discount brand, they report into a director who makes the purchasing decisions</inlineHelpText>
    <label>Add. Stakeholders and Team structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>