force-app/main/default/objects/Meeting__c/fields/Agency_Details__c.field-meta.xml
<CustomField>
    <fullName>Agency_Details__c</fullName>
    <label>Agency Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>