force-app/main/default/objects/Meeting__c/fields/Assignee_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Profile_Name__c</fullName>
    <label>Assignee Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>