force-app/main/default/objects/Meeting__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority over decision/budget?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>