force-app/main/default/objects/Meeting__c/fields/Auto_Message__c.field-meta.xml
<CustomField>
    <fullName>Auto_Message__c</fullName>
    <label>Auto-Message</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquire: Ad-Tech Solution</fullName>
            </value>
            <value>
                <fullName>Acquire: Agency Solution</fullName>
            </value>
            <value>
                <fullName>Acquire: Business Strategy Page</fullName>
            </value>
            <value>
                <fullName>Acquire: E-Commerce Industry</fullName>
            </value>
            <value>
                <fullName>Acquire: Insights per page</fullName>
            </value>
            <value>
                <fullName>Acquire: Insurance Industry</fullName>
            </value>
            <value>
                <fullName>Acquire: Knowledgebase</fullName>
            </value>
            <value>
                <fullName>Acquire: Multiple Visits to Pricing Page</fullName>
            </value>
            <value>
                <fullName>Acquire: New Pricing Message</fullName>
            </value>
            <value>
                <fullName>Acquire: Our Data</fullName>
            </value>
            <value>
                <fullName>Acquire: Overnight Pricing Page</fullName>
            </value>
            <value>
                <fullName>Acquire: PRO Product Lite</fullName>
            </value>
            <value>
                <fullName>Acquire: Publisher Solution</fullName>
            </value>
            <value>
                <fullName>Acquire: Travel Industry</fullName>
            </value>
            <value>
                <fullName>Acquire: Weekend Pricing Page</fullName>
            </value>
            <value>
                <fullName>Engage: First Login SDR</fullName>
            </value>
            <value>
                <fullName>Engage: SDR-FRO More than 10 days</fullName>
            </value>
            <value>
                <fullName>Engage: Weekend First Login SDR</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>FRO Overviews Message</fullName>
            </value>
            <value>
                <fullName>SDR FRO More than 5 days</fullName>
            </value>
            <value>
                <fullName>1st visitor pricing message</fullName>
            </value>
            <value>
                <fullName>Industry Message</fullName>
            </value>
            <value>
                <fullName>Acquire_Ad-Tech_Solution Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_Agency_Solution Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_Business_Strategy_Page Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_E-Commerce_Industry Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_Insights_per_page Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_Insurance_Industry Overnight</fullName>
            </value>
            <value>
                <fullName>Acquire_Knowledgebase Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>