force-app/main/default/objects/Meeting__c/fields/Best_times_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_times_to_contact__c</fullName>
    <label>Best times to contact</label>
    <type>TextArea</type>
</CustomField>