force-app/main/default/objects/Meeting__c/fields/Bi_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Bi_Data_ID__c</fullName>
    <description>MIS-2123 field will be deleted after ticket is done</description>
    <formula>BI_Data__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bi Data ID</label>
    <type>Text</type>
</CustomField>