force-app/main/default/objects/Meeting__c/fields/blba_meeting_score_at_creation__c.field-meta.xml
<CustomField>
    <fullName>blba_meeting_score_at_creation__c</fullName>
    <label>BLBA Meeting Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>