force-app/main/default/objects/Meeting__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>What is their budget?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>