force-app/main/default/objects/Meeting__c/fields/Budget_Indication__c.field-meta.xml
<CustomField>
    <fullName>Budget_Indication__c</fullName>
    <description>MIS-6753</description>
    <label>Budget Indication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Not discussed / Can’t tell yet</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>