force-app/main/default/objects/Meeting__c/fields/Business_and_Revenue_Model_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_and_Revenue_Model_Other_Details__c</fullName>
    <label>Business and Revenue Model Other Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>