force-app/main/default/objects/Meeting__c/fields/Business_Overview__c.field-meta.xml
<CustomField>
    <fullName>Business_Overview__c</fullName>
    <label>How does the business make its money?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>