force-app/main/default/objects/Meeting__c/fields/Buyer_Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Journey_Stage__c</fullName>
    <label>Buyer Journey Stage:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution Research</fullName>
            </value>
            <value>
                <fullName>Solution Comparison</fullName>
            </value>
            <value>
                <fullName>Solution Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>