force-app/main/default/objects/Meeting__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled/Unqualified Reason - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>