force-app/main/default/objects/Meeting__c/fields/Chat_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Chat_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat Conversation</label>
    <type>Checkbox</type>
</CustomField>