force-app/main/default/objects/Meeting__c/fields/Client_seeing_value_from_SW__c.field-meta.xml
<CustomField>
    <fullName>Client_seeing_value_from_SW__c</fullName>
    <inlineHelpText>Is the client currently seeing value from Similarweb?</inlineHelpText>
    <label>Client seeing value from SW?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>