force-app/main/default/objects/Meeting__c/fields/Compete_AM__c.field-meta.xml
<CustomField>
    <fullName>Compete_AM__c</fullName>
    <label>Compete AM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brian Zanella</fullName>
            </value>
            <value>
                <fullName>Brooke Lavallee</fullName>
            </value>
            <value>
                <fullName>Cameron Munger</fullName>
            </value>
            <value>
                <fullName>Meghan Mulvey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>