force-app/main/default/objects/Meeting__c/fields/Compete_API_Type__c.field-meta.xml
<CustomField>
    <fullName>Compete_API_Type__c</fullName>
    <label>Compete API Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>