force-app/main/default/objects/Meeting__c/fields/Compete_Product__c.field-meta.xml
<CustomField>
    <fullName>Compete_Product__c</fullName>
    <label>Compete Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compete PRO</fullName>
            </value>
            <value>
                <fullName>Compete API</fullName>
            </value>
            <value>
                <fullName>Intro Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>