force-app/main/default/objects/Meeting__c/fields/Compete_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Compete_Renewal_Date__c</fullName>
    <label>Compete Renewal Date</label>
    <type>Date</type>
</CustomField>