force-app/main/default/objects/Meeting__c/fields/Compete_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Compete_Revenue__c</fullName>
    <label>Compete Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>