force-app/main/default/objects/Meeting__c/fields/Compete_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Compete_Start_Date__c</fullName>
    <label>Compete Start Date</label>
    <type>Date</type>
</CustomField>