force-app/main/default/objects/Meeting__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Using a competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not using a competitor</fullName>
            </value>
            <value>
                <fullName>Evaluating a competitor</fullName>
            </value>
            <value>
                <fullName>Currently using a competitor</fullName>
            </value>
            <value>
                <fullName>Will replace SW with a competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>