force-app/main/default/objects/Meeting__c/fields/Competitors_to_Demo_on__c.field-meta.xml
<CustomField>
    <fullName>Competitors_to_Demo_on__c</fullName>
    <label>Competitors to Demo on:</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>