force-app/main/default/objects/Meeting__c/fields/Confirmation_of_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_Available_Budget__c</fullName>
    <label>Confirmation of Available Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>