force-app/main/default/objects/Meeting__c/fields/Contact_LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contact_LinkedIn_Profile__c</fullName>
    <description>Used in Email Template &quot;Email Template for MIR Handover Flow&quot;</description>
    <formula>Contact_Related_To__r.LinkedIn_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LinkedIn Profile</label>
    <type>Text</type>
</CustomField>