force-app/main/default/objects/Meeting__c/fields/Contact_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Contact_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Related to:</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>