force-app/main/default/objects/Meeting__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New contact</fullName>
            </value>
            <value>
                <fullName>Existing contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>