force-app/main/default/objects/Meeting__c/fields/CP_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Queue_Name__c</fullName>
    <label>CP Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>