force-app/main/default/objects/Meeting__c/fields/Create_an_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_an_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6753</description>
    <label>Create an Opportunity</label>
    <type>Checkbox</type>
</CustomField>