force-app/main/default/objects/Meeting__c/fields/Created_By_Sub_Motion__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Sub_Motion__c</fullName>
    <label>Created By Sub-Motion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>