force-app/main/default/objects/Meeting__c/fields/Created_By_The_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_The_Logged_in_User__c</fullName>
    <description>True if the record is created by the logged in User</description>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By The Logged-in User</label>
    <type>Checkbox</type>
</CustomField>