force-app/main/default/objects/Meeting__c/fields/Creator_Division__c.field-meta.xml
<CustomField>
    <fullName>Creator_Division__c</fullName>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Division</label>
    <type>Text</type>
</CustomField>