force-app/main/default/objects/Meeting__c/fields/Creator_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Creator_Manager_Email__c</fullName>
    <label>Creator Manager Email</label>
    <type>Email</type>
</CustomField>