force-app/main/default/objects/Meeting__c/fields/Creator_Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Creator_Manager_s_Manager__c</fullName>
    <description>MIS-7743</description>
    <label>Creator Manager&apos;s Manager</label>
    <type>Email</type>
</CustomField>