force-app/main/default/objects/Meeting__c/fields/Current_Potential_Issues__c.field-meta.xml
<CustomField>
    <fullName>Current_Potential_Issues__c</fullName>
    <inlineHelpText>Please describe any current or potential issues this customer is having with Similarweb products.</inlineHelpText>
    <label>Current/Potential Issues</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>