force-app/main/default/objects/Meeting__c/fields/Customer_s_Main_Business_Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Main_Business_Revenue_Model__c</fullName>
    <inlineHelpText>To choose multiple options, please use the CTRL button</inlineHelpText>
    <label>Customer&apos;s Main Business &amp; Revenue Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Online Transaction</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>