force-app/main/default/objects/Meeting__c/fields/Degree_of_Interest_in_SimilarWeb__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Interest_in_SimilarWeb__c</fullName>
    <label>What buying stage is the company at?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Research</fullName>
            </value>
            <value>
                <fullName>Comparing Solutions</fullName>
            </value>
            <value>
                <fullName>Ready to Buy</fullName>
            </value>
            <value>
                <fullName>Unclear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>