force-app/main/default/objects/Meeting__c/fields/Describe_the_value__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_value__c</fullName>
    <inlineHelpText>Please describe the value Similarweb is delivering to the customer or why they are not seeing enough value.</inlineHelpText>
    <label>Describe the value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>