force-app/main/default/objects/Meeting__c/fields/Economic_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Economic_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economic Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings (Economic Decision Maker)</relationshipLabel>
    <relationshipName>Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>