force-app/main/default/objects/Meeting__c/fields/Essentials_Prospect_Understands__c.field-meta.xml
<CustomField>
    <fullName>Essentials_Prospect_Understands__c</fullName>
    <label>Essentials Prospect Understands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>What is Market Intelligence</fullName>
            </value>
            <value>
                <fullName>How we are different from Direct Analytics</fullName>
            </value>
            <value>
                <fullName>Our easy-to-use SaaS/API Data Delivery</fullName>
            </value>
            <value>
                <fullName>Clear Value for his Use-case</fullName>
            </value>
            <value>
                <fullName>We are a Credible company</fullName>
            </value>
            <value>
                <fullName>We have a Paid annual solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>