force-app/main/default/objects/Meeting__c/fields/Expansion_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Opportunities__c</fullName>
    <inlineHelpText>Please describe any upsell, cross-sell, or horizontal-sell opportunities identified during the meeting.</inlineHelpText>
    <label>Expansion Field</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>