force-app/main/default/objects/Meeting__c/fields/Feedback_to_AM__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_AM__c</fullName>
    <description>MIS-4219</description>
    <label>Feedback to CSM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>