force-app/main/default/objects/Meeting__c/fields/Feedback_to_Compete__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Compete__c</fullName>
    <label>Feedback to Compete:</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>