force-app/main/default/objects/Meeting__c/fields/Feedback_to_MIR__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_MIR__c</fullName>
    <label>Feedback to MIR:</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>