force-app/main/default/objects/Meeting__c/fields/Fulfill__c.field-meta.xml
<CustomField>
    <fullName>Fulfill__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>