force-app/main/default/objects/Meeting__c/fields/Fulfill_Bar__c.field-meta.xml
<CustomField>
    <fullName>Fulfill_Bar__c</fullName>
    <formula>IF(Fulfill__c *20000&lt;150, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, Fulfill__c *20000 ) &amp;LEFT(TEXT(Fulfill__c *10000),5)+&quot;%&quot;, 

IF(Fulfill__c *20000 &lt; 200, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15,Fulfill__c *20000 )&amp;LEFT(TEXT(Fulfill__c *10000),5)+&quot;%&quot;, 

IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, Fulfill__c *20000 )&amp;LEFT(TEXT(Fulfill__c *10000),5)+&quot;%&quot;))</formula>
    <label>Completion Bar</label>
    <type>Text</type>
</CustomField>