force-app/main/default/objects/Meeting__c/fields/Helpful_Tips__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Tips__c</fullName>
    <label>Additional Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>