force-app/main/default/objects/Meeting__c/fields/How_do_they_conduct_their_research_and__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_conduct_their_research_and__c</fullName>
    <inlineHelpText>How do they come to decisions when building a strategy?</inlineHelpText>
    <label>How do they conduct their research?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>