force-app/main/default/objects/Meeting__c/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <description>MIS-2123 field will be deleted after ticket is done</description>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18</label>
    <type>Text</type>
</CustomField>