force-app/main/default/objects/Meeting__c/fields/Immediate_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Pain_Points__c</fullName>
    <description>Where is the prospect seeking to gether intelligence? What market visibility are they lacking ?</description>
    <label>Immediate Pain Points:</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>